--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,7 +27,9 @@
     "baseUrl": "./src",
     "paths": {
       "@app/*": ["app/*"],
-      "@features/*": ["features/*"]
+      "@app": ["app/index"],
+      "@features/*": ["features/*"],
+      "@features": ["features/index"]
     }
 
   },
