--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router": "^7.8.2",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
   },
