--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router": "^7.8.2",
