chore: update imports in tests file

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,7 @@
       "@app/*": ["app/*"],
       "@features/*": ["features/*"],
       "@components/*": ["components/*"],
+      "@tests/*": ["tests/*"],
     }
 
   },
